Update application properties, enhance authentication flow, and add user presence features